<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/headline1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/headline"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headline1"
        android:layout_centerHorizontal="true"
        android:digits="0123456789."
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/answer"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:layout_marginTop="30dp"
        android:text="@string/input"
        tools:ignore="UsingOnClickInXml" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp">

        <RadioButton
            android:textColor="@color/white"
            android:id="@+id/level1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="difficultyEasy"
            android:text="@string/level1"
            tools:ignore="UsingOnClickInXml" />

        <RadioButton
            android:textColor="@color/white"
            android:id="@+id/level2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="difficultyHard"
            android:text="@string/level2"
            tools:ignore="UsingOnClickInXml" />
    </RadioGroup>

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:onClick="exit"
        android:text="@string/exit"
        tools:ignore="UsingOnClickInXml" />
</RelativeLayout>